# nanomq

./: .gitignore  .gitignore-guide.md  .gitmodules  AGENTS.md  CMakeLists.txt  nanomq-taos-win64.iss  test_taos.sh  test_taos_sink.sh
docs/: directory.json
docs/zh_CN/: 焊接数据采集与边缘监测数据规范.md
docs/zh_CN/installation/: introduction.md  windows-cross-package.md  windows.md
docs/zh_CN/rule/: kylin-deb-ops-guide.md  kylin-nanomq-taos-troubleshooting-record-2026-04-16.md  ops-guide.md  taos-current-points-design.md  tdengine-sink.md  weld-nanomq-optimization-todo.md  weld-nanomq-reliability-problem-statement.md  weld-ops-delivery.md  weld-ops-rollout.md  windows-taos-ops-guide.md
etc/: nanomq_taos.conf  nanomq_taos_example.conf  nanomq_weld_taos.conf  test_sqlite.conf  weld_tdengine_schema.sql  weld_tdengine_schema_reset.sql
nanomq/: CMakeLists.txt  acl_handler.c  nanomq.c  process.c  pub_handler.c  rest_api.c  taos_sink.cpp  taos_sink.hpp  weld_taos_sink.cpp  weld_taos_sink.hpp  weld_telemetry.c  weld_telemetry.h  weld_telemetry_async.cpp  weld_telemetry_async.h
nanomq/apps/: broker.c
nanomq/include/: broker.h  nmq_process.h  process.h  version.h
nanomq/tests/: CMakeLists.txt  acl_handler_unit_test.c  aws_bridge_unit_test.c  broker_send_rule_test.c  cmd_proc_test.c  conf_api_unit_test.c  db_cli_unit_test.c  hashmap_internal_test.c  nanomq_rule_unit_test.c  nanomq_unit_test.c  plugin_unit_test.c  plugin_user_property_unit_test.c  process_test.c  pub_handler_weld_rule_test.c  rest_api_uri_unit_test.c  taos_sink_test.cpp  web_server_unit_test.c  webhook_inproc_unit_test.c  webhook_post_unit_test.c  weld_taos_sink_test.cpp  weld_telemetry_async_test.cpp  weld_telemetry_test.cpp
nanomq_cli/: CMakeLists.txt  client.c
public/0.24.14/: 01-Ubuntu全新主机-NanoMQ安装命令.md  02-Ubuntu全新主机-TDengine安装与初始化.md  nanomq_weld_taos.conf  weld_tdengine_schema.sql  weld_tdengine_schema_reset.sql  焊接遥测入库上线说明.md
scripts/: check-taos-ingest.sh  report-test-gaps.py  start-nanomq-taos.sh  stop-nanomq.sh
