nanomq_test(sub_handler_test)
nanomq_test(unsub_handler_test)
nanomq_test(pub_handler_test)
nanomq_test(broker_test)
nanomq_test(webhook_test)
nanomq_test(webhook_base62_test)
nanomq_test(webhook_base64_test)
nanomq_test(http_server_test)
nanomq_test(bridge_test)
nanomq_test(rule_engine_test)
nanomq_test(hashmap_test)
nanomq_test(broker_tls_test)
nanomq_test(bridge_tls_test)
nanomq_test(bridge_rap_rh_test)
nanomq_test(bridge_aws_test)
nanomq_test(bridge_muti_bridge_test)
nanomq_test(mqtt_api_test)
nanomq_test(nmq_ws_test)
nanomq_test(properties_test)
if(ENABLE_TAOS)
    add_executable(taos_sink_test taos_sink_test.cpp)
    target_link_libraries(taos_sink_test nng)
    target_include_directories(taos_sink_test PRIVATE
            ${PROJECT_SOURCE_DIR}/include)
    add_test(NAME nanomq.taos_sink_test COMMAND taos_sink_test)
    set_tests_properties(nanomq.taos_sink_test PROPERTIES TIMEOUT 60)

    add_executable(weld_telemetry_test weld_telemetry_test.cpp)
    target_link_libraries(weld_telemetry_test nng)
    target_include_directories(weld_telemetry_test PRIVATE
            ${PROJECT_SOURCE_DIR}/include)
    add_test(NAME nanomq.weld_telemetry_test COMMAND weld_telemetry_test)
    set_tests_properties(nanomq.weld_telemetry_test PROPERTIES TIMEOUT 60)
endif()
if(ENABLE_PARQUET)
    nanomq_test(parquet_test)
endif()
if(NNG_ENABLE_QUIC)
    nanomq_test(quic_smoke_test)
endif()
